<resources>
    <string name="app_name">ResPiRadar</string>

    <!-- MainActivity -->
    <string name="location_permissions_denied">Location Permissions denied</string>
    <string name="could_not_parse_heart_rate">Couldn\'t parse heart rate</string>
    <string name="could_not_parse_respiration_rate">Couldn\'t parse respiration rate</string>
    <string name="could_not_parse_real_time_breathing">Couldn\'t parse real time breathing</string>
    <string name="heart_rate_reliability">Reliability of heart rate is</string>

    <string name="time_s">Time (s)</string>
    <string name="heart_rate_bpm">Heart Rate (bpm)</string>
    <string name="respiration_rate_bpm">Respiration rate (bpm)</string>

    <!-- RealTimeBreathingActivity -->
    <string name="rotate_device">Rotate the device to portrait orientation</string>

    <string name="amplitude_mm">Amplitude (mm)</string>

    <!-- Buttons -->
    <string name="start_measure">Start Measure</string>
    <string name="stop_measure">Stop Measure</string>

    <!-- Graphs -->
    <string name="heart_rate_value">Heart rate: %1$s bpm</string>
    <string name="respiration_rate_value">Respiration Rate: %1$s bpm</string>
    <string name="heart_rate_reset">Heart rate:    </string>
    <string name="respiration_rate_reset">Respiration Rate:    </string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_bluetooth_settings">Bluetooth Settings</string>

    <string name="connection_canceled">
        Connection canceled
    </string>
    <string name="no_device_selected">
        No device selected
    </string>
    <string name="not_connected_to_rpi">
        Not connected to Raspberry Pi
    </string>
    <string name="power_off_rpi">
        Power off Raspberry Pi
    </string>
    <string name="start_writing_to_file">
        Start writing data to file
    </string>
    <string name="not_a_command">
        Not a regular command
    </string>

    <!-- pref_bluetooth.xml -->
    <string name="switch_bluetooth_on_off">Switch Bluetooth on or off</string>
    <string name="available_bluetooth_devices">Available Bluetooth devices</string>
    <string name="manual_connection">Manual connection</string>
    <string name="automated_connection">Automated Connection</string>
    <string name="search_after_rpi">Search after Raspberry Pi</string>
    <string name="connect_to_rpi">Connect to Raspberry Pi</string>
    <string name="other_settins">Other settings</string>
    <string name="command_terminal">Command Terminal</string>
    <string name="name_or_mac_address_rpi">Name or MAC address for Raspberry Pi</string>

    <!-- Menus -->
    <string name="menu_settings">Settings</string>
    <string name="help">Help</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="real_time_breathing">Real Time Breathing</string>
    <string name="scroll_to_end">Scroll To End</string>
    <string name="reset_graphs">Reset Graphs</string>

    <!-- settings.xml -->
    <string name="about_the_app">About the App</string>

    <!-- BluetoothService Settings-->
    <string-array name="pref_bluetooth_list">
        <item>None available</item>
    </string-array>
    <string-array name="pref_bluetooth_list_values">
        <item>0</item>
    </string-array>
    <string name="no_device_available">
        No device available
    </string>
    <string name="bluetooth_on">
        Bluetooth On
    </string>
    <string name="bluetooth_off">
        Bluetooth Off
    </string>

    <!-- Messages -->
    <string name="bluetooth_not_supported">
        Bluetooth Not Supported
    </string>
    <string name="could_not_connect_to_rpi">
        Couldn\'t connect to Raspberry Pi
    </string>
    <string name="did_not_find_rpi">
        Did not find Raspberry Pi
    </string>
    <string name="connected_to_rpi">
        Connected to Raspberry Pi
    </string>

    <!-- Information Main Activity -->

    <string name="close_dialog_fragment">CLOSE</string>

    <string name="info_main1">
        At start, the app will automatically start Bluetooth and try to connect to Raspberry Pi if
        it\'s available and has the following Python program running:
    </string>
    <string name="info_main2">
        https://github.com/Kandidatarbete-Chalmers-MCCX02-19-06/RaspberryPiRadarProgram
    </string>
    <string name="info_main22">
        The Raspberry Pi also needs a XC111+XR111 or XC112+XR112 radar chip and module from Acconeer:
    </string>
    <string name="info_main23">
         https://www.acconeer.com/products.
    </string>
    <string name="info_main3">
        The Bluetooth icon on the action bar will show the status of the Bluetooth connection. Click it to connect/disconnect Raspberry Pi.
    </string>
    <string name="info_main4">
        The Raspberry Pi is assumed to be named raspberrypi. If not, set the name or MAC-address in Bluetooth Settings.
    </string>
    <string name="info_main5">
        When connected, start the measurement with the START MEASURE button. It might take some time before the first value arrives.
    </string>
    <string name="info_main6">
        The values are plotted in the graphs. The graphs can be scrolled, zoomed and taped on to get the values.
        The graphs can be reset with Reset Graphs in the options menu. To scroll the graphs to the end, press Scroll To End.
    </string>
    <string name="heart_icon_info_main">
        A heart icon to the left of the displayed heart rate shows the reliability of the measured heart rate.
        Tap on it to get more detailed information.
    </string>
    <string name="info_main7">
        Rotate the phone to landscape to se a real time breathing amplitude graph, or just click Real Time Breathing in the options menu.
    </string>

    <!-- Information about the App -->

    <string name="info_settings1">
        This application is made in a Bachelor\'s thesis project at Chalmers University of Technology 2019.
        The purpose is to measure heart rate and respiration rate with a radar and display the results in an interactive application.
    </string>
    <string name="info_settings2">
        Developers: Albin Warnicke and Erik Angert Svensson
    </string>
    <string name="info_settings3">
        Licence: CC BY 4.0
    </string>
    <string name="copyright">
        Copyright \u00A9 2019 Albin Warnicke, Erik Angert Svensson, Julia Nystrand, Simon Nordenström, Emil Johansson and Sebastian Göbel
    </string>

    <!-- Information BluetoothService Settings -->

    <string name="info_bluetooth1">
        When Bluetooth turns on, the app will automatically try to connect to Raspberry Pi.
        If it doesn\'t succeed it will search for Raspberry Pi. When Raspberry Pi is found, the app will bond to it and then connect.
    </string>
    <string name="info_bluetooth2">
        Set the Bluetooth name or MAC-address for the Raspberry Pi (usually raspberrypi).
    </string>
    <string name="info_bluetooth3">
        Automated Connection is the method that is used every time Bluetooth starts.
        It will automatically search for the Raspberry Pi and connect to it.
    </string>
    <string name="info_bluetooth4">
        Search after Raspberry Pi and Connect to Raspberry Pi is methods to manually search and connect to Raspberry Pi.
    </string>
    <string name="info_bluetooth5">
        The Command Terminal is used to get some special features from the app. The commands are case insensitive. The following commands are available:
    </string>
    <string name="info_bluetooth6">
        \u25CF poweroff \u23E4 quit the Python program and power off Raspberry Pi
    </string>
    <string name="info_bluetooth7">
        \u25CF simulate \u23E4 simulate data instead of getting the data from Raspberry Pi
    </string>
    <string name="info_bluetooth8">
        \u25CF list \u23E4 get a list of paired Bluetooth devices
    </string>

</resources>
